Darken navbar whe opening the hamburger menu in mobile

--- a/aokit-vue/src/assets/css/styles.css
+++ b/aokit-vue/src/assets/css/styles.css
@@ -14026,7 +14026,12 @@ fieldset:disabled .btn {
 }
 
 #mainNav {
-    background-color: rgba(192, 192, 192, 0.5)
+    background-color: rgba(192, 192, 192, 0.5);
+    transition: background-color 0.3s ease;
+}
+
+#mainNav:has(.navbar-collapse.show) {
+    background-color: rgba(64, 52, 56, 0.95);
 }
 
 #mainNav .navbar-toggler {
